--- a/src/main/resources/templates/termelomerlegjegy.html
+++ b/src/main/resources/templates/termelomerlegjegy.html
@@ -108,10 +108,10 @@
 						<label>I. osztály mérés</label>
 					</div>
 					<div class="col-sm-3">
-						<input type="text" id="elsoMeresegy" class="form-control">
+						<input type="text" id="elsoMeresegy" maxlength="10" class="form-control">
 					</div>
 					<div class="col-sm-3">
-						<input type="text" id="elsoMeresKetto" class="form-control">
+						<input type="text" id="elsoMeresKetto" maxlength="10" class="form-control">
 					</div>
 					<div class="col-sm-3">
 						<label id="eredmény">0</label>
@@ -122,10 +122,10 @@
 						<label>II. osztály mérés</label>
 					</div>
 					<div class="col-sm-3">
-						<input type="text" id="masodMeresegy" class="form-control">
+						<input type="text" id="masodMeresegy" maxlength="10" class="form-control">
 					</div>
 					<div class="col-sm-3">
-						<input type="text" id="masodMeresKetto" class="form-control">
+						<input type="text" id="masodMeresKetto" maxlength="10" class="form-control">
 					</div>
 					<div class="col-sm-3">
 						<label id="eredmény">0</label>
@@ -136,10 +136,10 @@
 						<label>III. osztály mérés</label>
 					</div>
 					<div class="col-sm-3">
-						<input type="text" id="harmadMeresegy" class="form-control">
+						<input type="text" id="harmadMeresegy" maxlength="10" class="form-control">
 					</div>
 					<div class="col-sm-3">
-						<input type="text" id="harmadMeresKetto" class="form-control">
+						<input type="text" id="harmadMeresKetto" maxlength="10" class="form-control">
 					</div>
 					<div class="col-sm-3">
 						<label id="eredmény">0</label>
@@ -150,10 +150,10 @@
 						<label>IV. osztály mérés</label>
 					</div>
 					<div class="col-sm-3">
-						<input type="text" id="negyedMeresegy" class="form-control">
+						<input type="text" id="negyedMeresegy" maxlength="10" class="form-control">
 					</div>
 					<div class="col-sm-3">
-						<input type="text" id="negyedMeresKetto" class="form-control">
+						<input type="text" id="negyedMeresKetto" maxlength="10" class="form-control">
 					</div>
 					<div class="col-sm-3">
 						<label id="eredmény">0</label>
@@ -164,10 +164,10 @@
 						<label>Vastag gyökér mérés</label>
 					</div>
 					<div class="col-sm-3">
-						<input type="text" id="vastagMeresegy" class="form-control">
+						<input type="text" id="vastagMeresegy" maxlength="10" class="form-control">
 					</div>
 					<div class="col-sm-3">
-						<input type="text" id="vastagMeresKetto" class="form-control">
+						<input type="text" id="vastagMeresKetto" maxlength="10" class="form-control">
 					</div>
 					<div class="col-sm-3">
 						<label id="eredmény">0</label>
@@ -178,10 +178,10 @@
 						<label>Vékony gyökér mérés</label>
 					</div>
 					<div class="col-sm-3">
-						<input type="text" id="vékonyMeresegy" class="form-control">
+						<input type="text" id="vékonyMeresegy" maxlength="10" class="form-control">
 					</div>
 					<div class="col-sm-3">
-						<input type="text" id="vékonyMeresKetto" class="form-control">
+						<input type="text" id="vékonyMeresKetto" maxlength="10" class="form-control">
 					</div>
 					<div class="col-sm-3">
 						<label id="eredmény">0</label>
