--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,50 +9,96 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Felvásárlás</title>
 	
-	<link rel="stylesheet" href="../../css/style.css" th:href="@{/css/style.css}"/>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
-		
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-      
-    <link rel="shortcut icon" href="../../image/favicon-16x16.png" th:href="@{/image/favicon-16x16.png}">
+	<!-- Bootstrap CSS CDN-->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	
-	<!--[if lt IE 9]>
-	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
+	<!-- Font awesome CDN-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+	
+	<!-- Dtatatable css CDN-->
+	<!-- <link rel="stylesheet" href="//cdn.datatables.net/1.10.23/css/jquery.dataTables.min.css">  -->
+	<link rel="stylesheet" href="https://cdn.datatables.net/1.10.23/css/dataTables.bootstrap5.min.css">
+	
+	<!-- Custom CSS-->
+	<link rel="stylesheet" th:href="@{/css/custom.css}" href="../../css/custom.css" >
+	
+	
+	
 </head>
-<body>
+<body class="bg-gray-300" id="main">
 
-	<div class="container">
+	<div class="container-sm">
   		 
-		<nav class="navbar navbar-default">
-		    <div class="container-fluid">
-		       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				    <ul class="nav navbar-nav">
-				        <li class=""><a href="/">Kezdőoldal</a></li>
-				        <li class=""><a href="/termelomerlegjegy">Termelő mérlegjegy</a></li>
-				        <li class=""><a href="/vevoimerlegjegy">Vevő mérlegjegy</a></li>
-				        <li class=""><a href="/felvasarlasijegy">Felvásárlási jegy készítés</a></li>
-				        <li class=""><a href="/egyedilekérdezések">Számla készítés</a></li>
-				        <li class=""><a href="/ugyfelszerkesztes">Ügyfelek szerkesztése</a></li>
-				        <li class=""><a href="/beallitas">Beállítás</a></li>
-				    </ul>
-				    
-				</div>
-		    </div>
-		</nav>
-		
+  		 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary border border-secondary rounded-3">
+			  <div class="container-fluid">
+			    <a class="navbar-brand  text-gray-300" href="/">Kezdőoldal</a>
+			    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			      <span class="navbar-toggler-icon"></span>
+			    </button>
+			    <div class="collapse navbar-collapse" id="navbarNav">
+			      <ul class="navbar-nav">
+			      	<li class="nav-item dropdown">
+			          <a class="nav-link dropdown-toggle  text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+			            Mérlegjegyek
+			          </a>
+			          <ul class="dropdown-menu bg-primary" aria-labelledby="navbarDropdown">
+			            <li><a class="dropdown-item text-light" href="/merleg/merlegjegy">Új Termelő mérlegjegy</a></li>
+			            <li><a class="dropdown-item text-light" href="/merleg/vevomerlegjegy">Új Vevő mérlegjegy</a></li>
+			            <li><hr class="dropdown-divider"></li>
+			            <li><a class="dropdown-item text-light" href="/merleg/merlegjegylista">Mérlegjegy lekérdezések</a></li>
+			          </ul>
+			        </li>
+			        
+			        <li class="nav-item">
+			          <a class="nav-link text-light" href="/felvasarlas/felvasarlasijegy">Felvásárlási jegyek</a>
+			        </li>
+			        <li class="nav-item">
+			          <a class="nav-link text-light" href="/egyedilekerdezesek">Egyedi lekérdezések</a>
+			        </li>
+			        <li class="nav-item">
+			          <a class="nav-link text-light" href="/uj/ugyfel">Ügyfelek szerkesztése</a>
+			        </li>
+			        <li class="nav-item">
+			          <a class="nav-link text-light" href="/beallitas">Beállítás</a>
+			        </li>
+			        
+			      </ul>
+			    </div>
+			  </div>
+			</nav>
+  		 
+  		 
 		<div layout:fragment="content">
+		
+			
+		
+		
 		</div>
 
 
 		
 	
 	</div>
+	<!--Jquery CDN-->
+	<script
+		src="https://code.jquery.com/jquery-3.5.1.js"
+		integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+		crossorigin="anonymous"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" ></script>
-	<script th:src="@{/js/main.js}" src="../../js/main.js"></script>
+	<!--Bootstrap CDN-->
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+
+	<!--Data table CDN-->
+	<script src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"></script>
+	<script src="https://cdn.datatables.net/1.10.23/js/dataTables.bootstrap5.min.js"></script>
+	<script th:src="@{/js/datatable.js}" src="../../js/datatable.js"></script>
+	
+    <!-- Chart JS CDN -->
+	
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js" integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw==" crossorigin="anonymous"></script>
+    <script th:src="@{/js/chart.js}" src="../../js/chart.js"></script>	
+    <!-- Custom JS -->
+    <script th:src="@{/js/main.js}" src="../../js/main.js"></script>
 </body>
 </html>
