--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -98,7 +98,12 @@
 	
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js" integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw==" crossorigin="anonymous"></script>
     <script th:src="@{/js/chart.js}" src="../../js/chart.js"></script>	
+    <!-- jsPDF library -->
+    <script th:src="@{/js/html2pdf.bundle.min.js}" src="../../js/html2pdf.bundle.min.js"></script>
+	
     <!-- Custom JS -->
     <script th:src="@{/js/main.js}" src="../../js/main.js"></script>
+    <script th:src="@{/js/pdf.js}" src="../../js/pdf.js"></script>
+	
 </body>
 </html>
